--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inknut+Antiqua&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap');
 
 .Home {
   display: flex;
@@ -8,7 +9,18 @@
   font-family: 'Inknut Antiqua', serif;
 }
 
+button {
+  font-size: larger;
+  padding: 1vh 1vw;
+  cursor: pointer;
+  font-family: 'DM Sans', sans-serif;
+}
 
+.head-logged-in {
+  display: flex;
+  justify-content: space-between;
+  padding: 2vw;
+}
 
 .register {
   display: flex;
@@ -32,7 +44,20 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 80vh;
+  margin-bottom: 3vh;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form input {
+  border: none;
+  background-color: rgb(214, 214, 214);
+  margin: 0;
 }
 
 .booksWrap {
@@ -45,4 +70,12 @@
   padding: 2vw;
   background-color: bisque;
   text-align: center;
+}
+
+.line-seperation {
+  margin: 0;
+  padding: 0;
+  width: 0px;
+  border-left: 1px solid gray;
+  height: 80%;
 }
